tempfile/derive_more/tests/compile_fail/as_ref/struct_and_field.rs
#[derive(derive_more::AsRef)]
#[as_ref(forward)]
struct Foo {
    #[as_ref]
    bar: i32,
}

fn main() {}
